<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center">
        
        <com.seu.magiccamera.widget.BubbleSeekBar
	        android:id="@+id/fragment_adjust_seekbar"
	        android:layout_width="202dip"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        style="@style/SeekBar.Light">	        
	    </com.seu.magiccamera.widget.BubbleSeekBar>
    </RelativeLayout>
    <HorizontalScrollView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <RadioGroup 
            android:id="@+id/fragment_adjust_radiogroup"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:padding="10dp">
		    
		    <RadioButton 
		        android:id="@+id/fragment_radio_contrast"  
		        android:drawableTop="@drawable/selector_image_edit_adjust_contrast"
		        android:text="@string/edit_contrast"
		        style="@style/ImageEditor_adjust_radiobutton"/>
		    
		    <RadioButton 
		        android:id="@+id/fragment_radio_exposure"  
		        android:drawableTop="@drawable/selector_image_edit_adjust_exposure"
		        android:text="@string/edit_exposure"
		        style="@style/ImageEditor_adjust_radiobutton"/>
		    
		    <RadioButton 
		        android:id="@+id/fragment_radio_saturation"  
		        android:drawableTop="@drawable/selector_image_edit_adjust_saturation"
		        android:text="@string/edit_saturation"
		        style="@style/ImageEditor_adjust_radiobutton"/>
		    
		    <RadioButton 
		        android:id="@+id/fragment_radio_sharpness"  
		        android:drawableTop="@drawable/selector_image_edit_adjust_sharpness"
		        android:text="@string/edit_sharpness"
		        style="@style/ImageEditor_adjust_radiobutton"/>
		    
		    <RadioButton 
		        android:id="@+id/fragment_radio_bright"  
		        android:drawableTop="@drawable/selector_image_edit_adjust_bright"
		        android:text="@string/edit_brightness"
		        style="@style/ImageEditor_adjust_radiobutton"/>
		    
		    <RadioButton 
		        android:id="@+id/fragment_radio_hue"  
		        android:drawableTop="@drawable/selector_image_edit_adjust_hue"
		        android:text="@string/edit_hue"
		        style="@style/ImageEditor_adjust_radiobutton"/>
		</RadioGroup>
    </HorizontalScrollView>
</LinearLayout>
